minor spacing fixes

--- a/src/style/_MediaExpohall.scss
+++ b/src/style/_MediaExpohall.scss
@@ -144,7 +144,7 @@
   }
 
   .expo-image {
-    height: 400px;
+    height: 420px;
     max-width: 100%;
     margin: 0 10px 56px 10px;
   }
@@ -172,7 +172,8 @@
 
   .reason-expo-new-bg {
     background-image: url(../images/ruby.jpg);
-    width: 100%;
+    margin: 0 10%;
+    width: 80%;
     height: 380px;
     text-align: center;
   }
@@ -202,10 +203,10 @@
   .five-reasons-section {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 90%;
     justify-content: center;
     align-items: flex-start;
-    margin-top: 60px;
+    margin: 60px 5% 0 5%;
     text-align: center;
   }
 
