--- a/src/style/_MediaHome.scss
+++ b/src/style/_MediaHome.scss
@@ -179,8 +179,9 @@ h2 {
   }
 
   .prep-boxes-container {
-    width: 80%;
-    margin-left: 15%;
+    box-sizing: border-box;
+    width: 70%;
+    margin: 0 15%;
     display: flex;
     flex-direction: row;
     justify-content: center;
