--- a/src/style/_MediaMenu.scss
+++ b/src/style/_MediaMenu.scss
@@ -230,7 +230,7 @@
   }
   
   .navbar-column-link-box {
-    width: 260px;
+    width: 250px;
     margin: 10px 5px 20px 0;
     display: flex;
     flex-direction: column;
